--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 
     <main>
         <div class="login-container">
-            <img src="logo.png" alt="Logo do restaurante" class="login-logo">
+            <img src="Logo.png" alt="Logo do restaurante" class="login-logo">
             <form class="login-form">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email">
